[package]
name = "qr-recv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
blake2 = "0.10.6"
clap = { version = "4.5.8", features = ["derive"] }
hex = "0.4.3"
image = "0.25.1"
md5 = "0.7.0"
rqrr = "0.7.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
